--- a/parallel-coordinates/style.css
+++ b/parallel-coordinates/style.css
@@ -23,67 +23,18 @@ body {
 }
 
 /* Parallel Coordinates */
-.ui-resizable-handle {
-  position: absolute;
-  font-size: 0.1px;
-  z-index: 99999;
-  display: block;
-}
-.ui-resizable-n {
-  cursor: n-resize;
-  top: -5px;
-}
-.ui-resizable-s {
-  cursor: s-resize;
-  bottom: -5px;
-}
-.ui-resizable-s,
-.ui-resizable-n {
-  height: 8px;
-  width: 16px;
-  left: -2px;
-  border-radius: 2px;
-}
 #parallel-coordinates {
   position: relative;
 }
 #parallel-coordinates canvas {
   position: absolute;
 }
-#parallel-coordinates span.scrubber {
+#parallel-coordinates .axis,
+#parallel-coordinates canvas.axis-data,
+#parallel-coordinates canvas.axis-filter {
   position: absolute;
   display: block;
-  width: 12px;
-  cursor: move;
-}
-#parallel-coordinates span.scrubber span {
-  background: rgba(0, 0, 0, 0.05);
-  display: block;
-  width: 12px;
-  left: 1px;
-}
-#parallel-coordinates span.scrubber span:hover,
-#parallel-coordinates span.scrubber span.active {
-  background: hsla(42,90%,60%,0.3);
-  box-shadow: 0px 0px 8px #666;
-}
-.scrubber .active .ui-resizable-n,
-.scrubber .active .ui-resizable-s,
-.scrubber:hover .ui-resizable-n ,
-.scrubber:hover .ui-resizable-s {
-  background: hsla(0,00%,60%,1);
-  box-shadow: 0px 0px 10px #888;
-  border: 1px solid #888;
-}
-.scrubber .ui-resizable-n:hover ,
-.scrubber .ui-resizable-s:hover {
-  background: hsla(0,00%,10%,1);
-}
-#parallel-coordinates span.scrubber .ui-resizable-n {
-  top: 0px;
-}
-#parallel-coordinates span.scrubber .ui-resizable-s {
-  bottom: 0px;
+  width: 16px;
 }
 #footer {
   padding: 60px;
