--- a/parallel-coordinates/style.css
+++ b/parallel-coordinates/style.css
@@ -4,7 +4,7 @@ body {
   line-height: 1.35em;
 }
 #main {
-  width: 760px;
+  width: 1200px;
   margin: 0 auto;
 }
 /*SlickGrid */
@@ -25,16 +25,34 @@ body {
 /* Parallel Coordinates */
 #parallel-coordinates {
   position: relative;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
 #parallel-coordinates canvas {
   position: absolute;
 }
 #parallel-coordinates .axis,
-#parallel-coordinates canvas.axis-data,
-#parallel-coordinates canvas.axis-filter {
+#parallel-coordinates .axis-data,
+#parallel-coordinates .axis-filter {
   position: absolute;
   display: block;
+}
+#parallel-coordinates .axis {
+  width: 40px;
+}
+.axis-data {
+  left: 12px;
   width: 16px;
+  z-index: 9;
+}
+.axis-filter {
+  left: 12px;
+  width: 16px;
+  background: rgba(55,55,55,0.06);
+  z-index: 10;
 }
 #footer {
   padding: 60px;
